<resources>
    <string name="none">None</string>

    <string name="app_name">Paramedication</string>
    <string name="diagnosis">Diagnosis</string>
    <string name="bloodCount">Blood Count</string>
    <string name="currentMedication">Current Medication</string>
    <string name="result">Result</string>
    <string name="patients">Patients</string>
    <string name="database">Database</string>
    <string name="medication">Medication</string>
    <string name="info">Info</string>
    <string name="titleImageDescription">Paramedication</string>

    <!--strings used in Diagnosis - Patient-->
    <string name="patientNumber">Patient ID</string>
    <string name="diagnosisHelp">
        In this tab you are able to make a diagnosis.\nTherefore you have to enter the respective patient\'s data, blood count and current medication.\nAfter that you can get a diagnosis by pushing the Result button in the
        fourth tab.
        \n\nDo you want to see this instruction next time again?
    </string>

    <!--strings used in Diagnosis - Blood Count-->
    <string name="leukocyte">Leukocyte</string>
    <string name="erythrocyte">Erythrocyte</string>
    <string name="hemoglobin">Hemoglobin</string>
    <string name="hematocrit">Hematocrit</string>
    <string name="mcv">MCV</string>
    <string name="MCH">MCH</string>
    <string name="mchc">MCHC</string>
    <string name="platelet">Platelet</string>
    <string name="reticulocytes">Reticulocytes</string>
    <string name="mpv">MPV</string>
    <string name="rdw">RDW</string>
    <string name="leukocyteUnit">1/µl</string>
    <string name="erythrocyteUnit">Mio./µl</string>
    <string name="hemoglobinUnit">g/dl</string>
    <string name="hematocritUnit">%</string>
    <string name="mcvUnit">fl</string>
    <string name="mchUnit">pg</string>
    <string name="mchcUnit">g/dl</string>
    <string name="plateletUnit">1/µl</string>
    <string name="reticulocytesUnit">1/µl</string>
    <string name="mpvUnit">fl</string>
    <string name="rdwUnit">%</string>
    <string name="update">Update</string>
    <string name="save">Save</string>
    <string name="recommendedMedication">Recommended Medication</string>

    <!--strings used in Diagnosis - Blood Count-->
    <string name="drug">Drug</string>
    <string name="addMore">Add more</string>
    <string name="getResult">Get result</string>

    <!--strings used in Database - Blood Count-->
    <string name="min">Min</string>
    <string name="max">Max</string>
    <string name="minimum">Minimum</string>
    <string name="maximum">Maximum</string>
    <string name="checkInput">Check input</string>
    <string name="disease">Disease</string>
    <string name="incidence">Prevalence</string>
    <string name="incidenceUnit">1/1 Mio.</string>
    <string name="databaseHelp">In this tab you are able to add new diseases to the database.
        Therefore you have to enter the disease\'s name, its threshold values and a recommended
        medication for the disease. When done push the Save button at the bottom of the fourth tab.
        \n\nDo you want to see this instruction next time again?
    </string>

    <!--strings used in medication-->
    <string name="Drug1">Drug I</string>
    <string name="Drug2">Drug II</string>
    <string name="type">Interaction</string>
    <string name="medicationHelp">In this tab you are able to enter new medication interactions to
        the database. Therefore you just have to enter the respective names, type of interaction and
        push the button on the bottom.
        \n\nDo you want to see this instruction next time again?
    </string>

    <!--strings used in info-->
    <string name="universityInfo">The RheinMain University of Applied Sciences was founded in 1971.\nWith more than 12,000 students, which are divided into five faculties, it is one of the bigger universities in Germany.
    </string>
    <string name="appInfo">This app was created as part of a bachelor thesis. Every diagnosis is
        only a suggestion and does not have to be right.
    </string>
    <string name="bugInfo">If you find any bugs, mistakes or have suggestions to make the app more
        efficient, feel free to send an email.\nWe are really looking forward to get your feedback.\n\n
        Developer:\n
        Kevin Stowers\n
        RheinMain University of Applied Sciences
    </string>
    <string name="buttonMail">Send E-Mail</string>
    <string name="supportMail">kevin.stowers92@gmail.com</string>
    <string name="subject">Paramedication</string>
    <string name="infoHelp">This tab is about the project. If you find bugs, feel free to send
        an email. In order to do this you just have to push the button on the bottom.
        \n\nDo you want to see the instruction on the next start again?
    </string>

    <!--strings used in Patients-->
    <string name="entryHint">Patient ID</string>
    <string name="buttonString">See Data</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="time">Date</string>
    <string name="patientsHelp">In this tab you can see every patient\'s file. In order to do so you have to
        enter the respective patient\'s id.
        \n\nDo you want to see this instruction next time again?
    </string>

    <!--strings used in Patients for result-->
    <string name="PatientID">Patient ID</string>
    <string name="drugName">Drug name
    </string>
    <string name="noDiseaseFound">No disease found.</string>
</resources>
