<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Info">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/backgroundRed">

        <TextView
            android:id="@+id/textView"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="changeToDiagnosis"
            android:text="@string/diagnosis"
            android:textAlignment="center"
            android:textSize="15sp" />

        <TextView
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/textColor" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="changeToPatients"
            android:text="@string/patients"
            android:textAlignment="center"
            android:textSize="15sp" />

        <TextView
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/textColor" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="changeToDatabase"
            android:text="@string/database"
            android:textAlignment="center"
            android:textSize="15sp" />

        <TextView
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/textColor" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="changeToMedication"
            android:text="@string/medication"
            android:textAlignment="center"
            android:textSize="15sp" />

        <TextView
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/textColor" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="changeToInfo"
            android:textStyle="bold"
            android:background="@color/foregroundRed"
            android:text="@string/info"
            android:textAlignment="center"
            android:textSize="15sp" />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/textColor" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="10">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/backgroundRed" />

            <TextView
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@color/textColor" />
        </LinearLayout>

        <android.support.v4.widget.NestedScrollView
            android:layout_width="0dp"
            android:layout_weight="10"
            android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/drugs"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:background="@android:color/white"
                android:padding="16dp">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="150dp"
                    android:layout_gravity="center_horizontal"
                    android:src="@drawable/hsrm"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/textColor"
                    android:padding="8dp"
                    android:text="@string/universityInfo"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/textColor"
                    android:padding="8dp"
                    android:text="@string/appInfo"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    android:textColor="@color/textColor"
                    android:text="@string/bugInfo"/>

                <Button
                    android:id="@+id/addButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    android:layout_gravity="center"
                    android:background="@color/backgroundRed"
                    android:text="@string/buttonMail"
                    android:onClick="sendMail"
                    android:textColor="@color/textColor" />
            </LinearLayout>
        </android.support.v4.widget.NestedScrollView>
    </LinearLayout>

</LinearLayout>