<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Info">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/backgroundRed">

        <TextView
            android:id="@+id/textView"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/diagnosis"
            android:textAlignment="center"
            android:textSize="15sp" />

        <TextView
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/textColor" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/patients"
            android:textStyle="bold"
            android:background="@color/foregroundRed"
            android:textAlignment="center"
            android:textSize="15sp" />

        <TextView
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/textColor" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="changeToDatabase"
            android:text="@string/database"
            android:textAlignment="center"
            android:textSize="15sp" />

        <TextView
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/textColor" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="changeToMedication"
            android:text="@string/medication"
            android:textAlignment="center"
            android:textSize="15sp" />

        <TextView
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/textColor" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="changeToInfo"
            android:text="@string/info"
            android:textAlignment="center"
            android:textSize="15sp" />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/textColor" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="10">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/backgroundRed" />

            <TextView
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@color/textColor" />
        </LinearLayout>

        <android.support.v4.widget.NestedScrollView
            android:id="@+id/editableSpace"
            android:layout_width="0dp"
            android:layout_weight="10"
            android:layout_height="match_parent">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
            <EditText
                android:id="@+id/PatientID"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:layout_margin="16dp"
                android:hint="@string/entryHint"/>
            <Button
                android:id="@+id/getPatientData"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:layout_gravity="center_horizontal"
                android:text="@string/buttonString"/>
            </LinearLayout>

</android.support.v4.widget.NestedScrollView>
    </LinearLayout>

</LinearLayout>