<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/backgroundRed">
        <TextView
            android:id="@+id/textView"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:maxLines="1"
            android:onClick="changeToDiagnosis"
            android:text="@string/diagnosis"
            android:textAlignment="center"
            android:textSize="15sp" />

        <TextView
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/textColor" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:maxLines="1"
            android:onClick="changeToPatients"
            android:text="@string/patients"
            android:textAlignment="center"
            android:textSize="15sp" />

        <TextView
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/textColor" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:maxLines="1"
            android:onClick="changeToDatabase"
            android:text="@string/database"
            android:textAlignment="center"
            android:textSize="15sp" />

        <TextView
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/textColor" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/foregroundRed"
            android:gravity="center_vertical"
            android:maxLines="1"
            android:onClick="changeToMedication"
            android:text="@string/medication"
            android:textAlignment="center"
            android:textSize="15sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/textColor" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:maxLines="1"
            android:onClick="changeToInfo"
            android:text="@string/info"
            android:textAlignment="center"
            android:textSize="15sp" />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/textColor" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="10">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/backgroundRed" />

            <TextView
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@color/textColor" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="10"
            android:orientation="vertical">
        <LinearLayout
            android:id="@+id/printArea1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="10"
            android:orientation="vertical"
            android:padding="8dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/drug1TextView1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="16dp"
                    android:text="@string/Drug1"
                    android:textColor="@color/textColor"
                    android:textSize="15sp" />

                <AutoCompleteTextView
                    android:id="@+id/autocompleteDrugI"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:hint="@string/drugName"
                    android:maxLines="1"
                    android:textColor="@color/textColor" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/drug2TextView"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="16dp"
                    android:text="@string/Drug2"
                    android:textColor="@color/textColor"
                    android:textSize="15sp" />

                <AutoCompleteTextView
                    android:id="@+id/autocompleteDrugII"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:hint="@string/drugName"
                    android:maxLines="1"
                    android:textColor="@color/textColor" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/interactionTextView"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="16dp"
                    android:text="@string/type"
                    android:textColor="@color/textColor"
                    android:textSize="15sp" />

                <EditText
                    android:id="@+id/interaction"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:maxLines="1"
                    android:textColor="@color/textColor" />
            </LinearLayout>

            <Button
                android:id="@+id/addDrugInteraction"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="8dp"
                android:background="@color/backgroundRed"
                android:text="@string/update"
                android:textColor="@color/textColor" />
            </LinearLayout>
            <LinearLayout
                android:id="@+id/printArea2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="8dp"
                android:visibility="gone">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:padding="16dp"
                        android:text="@string/Drug1"
                        android:textColor="@color/textColor"
                        android:textSize="15sp" />

                    <TextView
                        android:id="@+id/saveDrugIValue"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:padding="16dp"
                        android:text="@string/Drug1"
                        android:textColor="@color/textColor"
                        android:textSize="15sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:padding="16dp"
                        android:text="@string/Drug2"
                        android:textColor="@color/textColor"
                        android:textSize="15sp" />

                    <TextView
                        android:id="@+id/saveDrugIIValue"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:padding="16dp"
                        android:text="@string/Drug1"
                        android:textColor="@color/textColor"
                        android:textSize="15sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/saveInteractionLabel"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:padding="16dp"
                        android:text="@string/type"
                        android:textColor="@color/textColor"
                        android:textSize="15sp" />

                    <TextView
                        android:id="@+id/saveInteraction"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:padding="16dp"
                        android:text="@string/Drug1"
                        android:textColor="@color/textColor"
                        android:textSize="15sp" />
                </LinearLayout>

                <Button
                    android:id="@+id/SaveDrugInteraction"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_margin="8dp"
                    android:background="@color/backgroundRed"
                    android:text="Save"
                    android:textColor="@color/textColor" />
                </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>